fixed screen shift when dialog is closed (moved padding from html to css file); now using app.listen() instead of http.createServer()

--- a/src/client/css/chess.css
+++ b/src/client/css/chess.css
@@ -2,6 +2,9 @@
 
 /* Bootstrap over-rides begin */
 
+body {
+  padding: 20px;
+}
 hr {
   border-top-color: #999;
 }
